k8s/06-middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-appid-to-body
  namespace: kube-system
spec:
  headersToBody:
    headerNames:
      - X-App-ID

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-userid-to-body
  namespace: kube-system
spec:
  headersToBody:
    headerNames:
      - X-User-ID

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-app-login-token-to-body
  namespace: kube-system
spec:
  headersToBody:
    headerNames:
      - X-App-Login-Token

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: app-rbac-auth
  namespace: kube-system
spec:
  rbacAuth:
    headerNames:
      - X-App-ID

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: app-user-role-rbac-auth
  namespace: kube-system
spec:
  rbacAuth:
    headerNames:
      - X-App-ID
      - X-User-ID
      - X-App-Login-Token

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: common-headers
  namespace: kube-system
spec:
  headers:
    accessControlAllowCredentials: TRUE
    customResponseHeaders:
      Connection: "keep-alive"
      Access-Control-Allow-Headers: "X-App-ID,X-User-ID,X-App-User-Token,X-Locale,X-Login-Verify,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
      Access-Control-Expose-Headers: "X-App-ID,X-User-ID,X-App-User-Token,X-Locale,X-Login-Verify,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
      Access-Control-Allow-Methods: "GET,POST,OPTIONS,HEAD,PUT,DELETE,TRACE,PATCH"
      Access-Control-Allow-Origin: "*"
    accessControlMaxAge: 100
    addVaryHeader: true

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-https-testing
  namespace: kube-system
spec:
  redirectRegex:
    regex: ^http://([-a-zA-Z0-9|.]*):8080/(.*)
    replacement: https://${1}:38443/${2}

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-https
  namespace: kube-system
spec:
  redirectRegex:
    regex: ^http://([-a-zA-Z0-9|.]*)/(.*)
    replacement: https://${1}/${2}
