k8s/07-middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-appid-to-body
  namespace: kube-system
spec:
  headersToBody:
    headerNames:
      - X-App-ID

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-userid-to-body
  namespace: kube-system
spec:
  headersToBody:
    headerNames:
      - X-User-ID

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-langid-to-body
  namespace: kube-system
spec:
  headersToBody:
    headerNames:
      - X-Lang-ID

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-app-login-token-to-body
  namespace: kube-system
spec:
  headersToBody:
    headerNames:
      - X-App-Login-Token

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: app-rbac-auth
  namespace: kube-system
spec:
  rbacAuth:
    headerNames:
      - X-App-ID

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: app-user-role-rbac-auth
  namespace: kube-system
spec:
  rbacAuth:
    headerNames:
      - X-App-ID
      - X-User-ID
      - X-App-Login-Token

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: common-headers
  namespace: kube-system
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
      - X-App-ID
      - X-Lang-ID
      - X-User-ID
      - X-App-Login-Token
      - X-Locale
      - X-Login-Verify
      - DNT
      - X-CustomHeader
      - Keep-Alive
      - User-Agent
      - X-Requested-With
      - If-Modified-Since
      - Cache-Control
      - Content-Type
      - Authorization
    accessControlExposeHeaders:
      - X-App-ID
      - X-Lang-ID
      - X-User-ID
      - X-App-Login-Token
      - X-Locale
      - X-Login-Verify
      - DNT
      - X-CustomHeader
      - Keep-Alive
      - User-Agent
      - X-Requested-With
      - If-Modified-Since
      - Cache-Control
      - Content-Type
      - Authorization
    accessControlAllowMethods:
      - GET
      - POST
      - OPTIONS
      - HEAD
      - PUT
      - DELETE
      - TRACE
      - PATCH
    accessControlAllowOriginList:
      - https://genesis.hk-cryptomore-production.npool.top
      - http://genesis.tokyo-xhash-production.npool.top
      - https://genesis.development.npool.top
      - https://genesis.jh-testing.npool.top
      - https://smoketest.development.npool.top
      - https://smoketest.jh-testing.npool.top:20402
      - https://genesis.japan-procyon-production.npool.top
      - https://admin.development.npool.top
      - https://www.procyon.xpool.top
      - https://dashboard.procyon.xpool.top
      - https://www.procyon.vip
      - https://procyon.vip
      - https://dashboard.procyon.vip
      - https://admin.japan-procyon-production.npool.top
      - https://dashboard.procyon.npool.top:20402
      - https://dashboard.lpsb.npool.top:20402
      - https://admin.jh-testing.npool.top:20402
      - https://www.procyon.npool.top:20402
      - https://www.lpsb.npool.top:20402
      - https://cryptomore.npool.top:20402
      - https://www.ohhash.xpool.top
      - https://dashboard.ohhash.xpool.top
      - https://ohhash.com
      - https://www.ohhash.com
      - https://www.ohhash.npool.top:20402
      - https://dashboard.ohhash.com
      - https://dashboard.ohhash.npool.top:20402
      - https://admin.ohhash-production.npool.top
      - https://admin.singapore-testing.npool.top
      - https://admin.hk-cryptomore-production.npool.top
      - http://swagger-ui.internal-devops.development.npool.top
      - http://traefik-webui.internal-devops.development.npool.top
      - https://www.lpsecretbase.com
      - https://lpsecretbase.com
      - https://dashboard.lpsecretbase.com
      - http://vpn.web3eye.jh-testing.npool.top
      - https://vpn.web3eye.jh-testing.npool.top
      - http://dashboard.web3eye.npool.top
      - https://dashboard.web3eye.npool.top
      - https://testnet.web3eye.io
      - http://dashboard.testnet.web3eye.io
      - https://web3eye.npool.top:20402
      - http://web3eye.npool.top:20401
      - https://mimo.npool.top:20402
      - https://mimo.biz
      - https://www.mimo.biz
      - https://www.cryptomore.io
      - https://cryptomore.io
      - https://www.hashrate-demo.npool.top:20402
      - https://www.epool.tech:20402
      - https://epool.tech:20402
      - https://dashboard.epool.tech:20402
      - https://xhash.npool.top:20402
      - https://www.xhash.npool.top:20402
      - https://dashboard.xhash.npool.top:20402
      - https://xhash.ai
      - https://www.xhash.ai
      - https://dashboard.xhash.ai
    accessControlMaxAge: 100
    addVaryHeader: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-https-testing
  namespace: kube-system
spec:
  redirectRegex:
    regex: ^http://([-a-zA-Z0-9|.]*):20401/(.*)
    replacement: https://${1}:20402/${2}

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-https
  namespace: kube-system
spec:
  redirectRegex:
    regex: ^http://([-a-zA-Z0-9|.]*)/(.*)
    replacement: https://${1}/${2}

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oplog
  namespace: kube-system
spec:
  opLog:
    empty:
      - empty
