k8s/11-grpcweb-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grpcweb-proxy
  namespace: kube-system
spec:
  grpcWeb:
    allowOrigins:
      - "*"
