k8s/04-deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      serviceAccountName: traefik-ingress-controller
      nodeSelector:
        type: traefik
        kubernetes.io/os: linux
      containers:
        - name: traefik
          # image: traefik:v2.5.3
          image: uhub.service.ucloud.cn/entropypool/traefik-service:v2.5.3.1
          imagePullPolicy: Always
          args:
            - --api.insecure
            - --accesslog
            - --log.level=INFO
            - --log.filePath=/var/log/traefik.log
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --entrypoints.websecure.http.tls=true
            - --entrypoints.traefik.Address=:38080
            - --providers.kubernetesingress
            - --providers.kubernetescrd
            - --providers.kubernetesingress.ingressclass=traefik-internet
            - --tracing.jaeger=true
            - --tracing.jaeger.samplingServerURL=http://localhost:5778/sampling
            - --tracing.jaeger.localAgentHostPort=localhost:6831
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
            - name: websecure
              containerPort: 443
              protocol: TCP
            - name: admin
              containerPort: 38080
              protocol: TCP

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik-webui
  labels:
    app: traefik-webui

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-webui
  template:
    metadata:
      labels:
        app: traefik-webui
    spec:
      containers:
        - name: traefik-webui
          image: uhub.service.ucloud.cn/entropypool/traefik-webui-development:v2.5.3.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 80
