k8s/06-deployments-vpn.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik-vpn
  labels:
    app: traefik-vpn

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-vpn
  template:
    metadata:
      labels:
        app: traefik-vpn
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      serviceAccountName: traefik-ingress-controller
      nodeSelector:
        type: traefik-vpn
        kubernetes.io/os: linux
      containers:
        - name: traefik-vpn
          # image: traefik:v2.5.3
          image: uhub.service.ucloud.cn/entropypool/traefik-service:v2.5.3.1
          imagePullPolicy: Always
          args:
            - --api.insecure
            - --accesslog
            - --log.level=INFO
            - --log.filePath=/var/log/traefik.log
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --entrypoints.websecure.http.tls=true
            - --entrypoints.traefik.Address=:38080
            - --providers.kubernetesingress
            - --providers.kubernetescrd
            - --providers.kubernetesingress.ingressclass=traefik-internet-vpn
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
            - name: websecure
              containerPort: 443
              protocol: TCP
