k8s/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system

spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
      nodePort: 80
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 443
      targetPort: 443
      nodePort: 443
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-webui
  namespace: kube-system

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: traefik-webui
