k8s/05-services-vpn.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-vpn
  namespace: kube-system

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik-vpn
