k8s/09-services-v3-vpn.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-v3-vpn
  namespace: kube-system

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8180
    - protocol: TCP
      name: websecure
      port: 8443
  selector:
    app: traefik-vpn
