k8s/09-services-vpn-developer.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-vpn-developer
  namespace: kube-system

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik-vpn-developer
