k8s/04-traefik-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: traefik-webui
    k8s.kuboard.cn/workload: traefik-webui
    nginx.com/sticky-cookie-services: "serviceName=traefik-admin srv_id expires=1h path=/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: traefik-webui.internal-devops.development.npool.top
    http:
      paths:
      - path: /traefik/dashboard
        backend:
          serviceName: traefik-webui
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-admin-api-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: traefik-service
    k8s.kuboard.cn/workload: traefik-service
    nginx.com/sticky-cookie-services: "serviceName=traefik-service srv_id expires=1h path=/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: traefik-api.internal-devops.development.npool.top
    http:
      paths:
      - path: /traefik/api(/|$)(.*)
        backend:
          serviceName: traefik
          servicePort: 38080
