k8s/08-traefik-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: traefik-webui
    k8s.kuboard.cn/workload: traefik-webui
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-common-headers@kubernetescrd
spec:
  rules:
    - host: traefik-webui.development.npool.top
      http:
        paths:
          - path: /traefik/dashboard
            backend:
              serviceName: traefik-webui
              servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-admin-api-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: traefik-service
    k8s.kuboard.cn/workload: traefik-service
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-traefik-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd
spec:
  rules:
    - host: traefik-api.development.npool.top
      http:
        paths:
          - path: /traefik/api
            backend:
              serviceName: traefik
              servicePort: 38080

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-traefik-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /traefik
